--- a/EgitimPlatformuAI/CustomViews/CustomNameContainer/CustomNameContainerView.xib
+++ b/EgitimPlatformuAI/CustomViews/CustomNameContainer/CustomNameContainerView.xib
@@ -15,7 +15,7 @@
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB">
-            <rect key="frame" x="0.0" y="0.0" width="393" height="80"/>
+            <rect key="frame" x="0.0" y="0.0" width="402" height="80"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="L5M-bK-GFP">
@@ -27,16 +27,16 @@
                     </constraints>
                 </imageView>
                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="pTR-6V-eTq">
-                    <rect key="frame" x="70" y="15" width="323" height="50"/>
+                    <rect key="frame" x="70" y="15" width="277" height="50"/>
                     <subviews>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Welcome" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="95m-fs-raK">
-                            <rect key="frame" x="0.0" y="0.0" width="323" height="25"/>
+                            <rect key="frame" x="0.0" y="0.0" width="277" height="25"/>
                             <fontDescription key="fontDescription" type="system" pointSize="12"/>
                             <color key="textColor" name="porcelain"/>
                             <nil key="highlightedColor"/>
                         </label>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4rN-vp-yWD">
-                            <rect key="frame" x="0.0" y="25" width="323" height="25"/>
+                            <rect key="frame" x="0.0" y="25" width="277" height="25"/>
                             <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                             <color key="textColor" name="porcelain"/>
                             <nil key="highlightedColor"/>
@@ -46,21 +46,32 @@
                         <constraint firstAttribute="height" constant="50" id="eLo-1j-dJf"/>
                     </constraints>
                 </stackView>
+                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bell.badge.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="Lx3-fg-x0s">
+                    <rect key="frame" x="357" y="14.333333333333332" width="30" height="30.333333333333339"/>
+                    <color key="tintColor" name="porcelain"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="30" id="6YT-Ts-3Bd"/>
+                        <constraint firstAttribute="width" constant="30" id="Uyd-dC-BFO"/>
+                    </constraints>
+                </imageView>
             </subviews>
             <color key="backgroundColor" name="darkBlue"/>
             <constraints>
-                <constraint firstAttribute="trailing" secondItem="pTR-6V-eTq" secondAttribute="trailing" id="09V-Ga-lEA"/>
                 <constraint firstItem="pTR-6V-eTq" firstAttribute="leading" secondItem="L5M-bK-GFP" secondAttribute="trailing" constant="10" id="B3m-fI-jcG"/>
                 <constraint firstItem="L5M-bK-GFP" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="20" id="FuE-gV-LLc"/>
                 <constraint firstItem="L5M-bK-GFP" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="Grw-i1-msW"/>
                 <constraint firstItem="pTR-6V-eTq" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="15" id="Hwx-Ye-WBZ"/>
+                <constraint firstAttribute="trailing" secondItem="Lx3-fg-x0s" secondAttribute="trailing" constant="15" id="SH7-6x-85f"/>
+                <constraint firstItem="Lx3-fg-x0s" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="15" id="W1c-9x-gJt"/>
                 <constraint firstAttribute="bottom" secondItem="pTR-6V-eTq" secondAttribute="bottom" constant="15" id="cAd-fW-jg5"/>
+                <constraint firstItem="Lx3-fg-x0s" firstAttribute="leading" secondItem="pTR-6V-eTq" secondAttribute="trailing" constant="10" id="fgT-cf-rx4"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-            <point key="canvasLocation" x="101.5267175572519" y="19.718309859154932"/>
+            <point key="canvasLocation" x="100.76335877862596" y="19.718309859154932"/>
         </view>
     </objects>
     <resources>
+        <image name="bell.badge.fill" catalog="system" width="117" height="128"/>
         <namedColor name="darkBlue">
             <color red="0.11764705882352941" green="0.13725490196078433" blue="0.17254901960784313" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
