--- a/EgitimPlatformuAI/CustomViews/HomeScreenCollectionViewCell/HomeScreenCollectionViewCell.xib
+++ b/EgitimPlatformuAI/CustomViews/HomeScreenCollectionViewCell/HomeScreenCollectionViewCell.xib
@@ -11,56 +11,70 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="HomeScreenCollectionViewCell" id="gTV-IL-0wX" customClass="HomeScreenCollectionViewCell" customModule="EgitimPlatformuAI" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="137" height="130"/>
+            <rect key="frame" x="0.0" y="0.0" width="180" height="180"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="137" height="130"/>
+                <rect key="frame" x="0.0" y="0.0" width="180" height="180"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
                     <view contentMode="scaleToFill" id="IKX-4Y-VVZ">
-                        <rect key="frame" x="0.0" y="0.0" width="137" height="130"/>
+                        <rect key="frame" x="0.0" y="0.0" width="180" height="180"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Ubc-xM-DpQ">
-                                <rect key="frame" x="10" y="10" width="117" height="110"/>
+                                <rect key="frame" x="10" y="10" width="160" height="160"/>
                                 <subviews>
-                                    <stackView opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" alignment="top" translatesAutoresizingMaskIntoConstraints="NO" id="F45-vy-b3y">
-                                        <rect key="frame" x="5" y="5" width="107" height="100"/>
+                                    <stackView opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" alignment="top" translatesAutoresizingMaskIntoConstraints="NO" id="F45-vy-b3y">
+                                        <rect key="frame" x="15" y="10" width="140" height="120"/>
                                         <subviews>
-                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="1000" verticalHuggingPriority="1000" horizontalCompressionResistancePriority="251" verticalCompressionResistancePriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="3hp-NS-FiP">
-                                                <rect key="frame" x="0.0" y="0.0" width="67" height="55.333333333333336"/>
+                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="1000" verticalHuggingPriority="1000" horizontalCompressionResistancePriority="251" verticalCompressionResistancePriority="251" image="house" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="3hp-NS-FiP">
+                                                <rect key="frame" x="0.0" y="0.33333333333333215" width="50" height="59.333333333333343"/>
                                                 <color key="tintColor" name="paleGray"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" constant="50" id="LuX-bg-aXx"/>
+                                                </constraints>
                                             </imageView>
-                                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="vJe-m3-FlM">
-                                                <rect key="frame" x="0.0" y="55.333333333333329" width="36" height="40.666666666666671"/>
+                                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" translatesAutoresizingMaskIntoConstraints="NO" id="vJe-m3-FlM">
+                                                <rect key="frame" x="0.0" y="60" width="100.66666666666667" height="60"/>
                                                 <subviews>
-                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="1000" verticalCompressionResistancePriority="1000" text="label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ye4-Mn-GpH">
-                                                        <rect key="frame" x="0.0" y="0.0" width="36" height="20.333333333333332"/>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="1000" verticalCompressionResistancePriority="1000" text="label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ye4-Mn-GpH">
+                                                        <rect key="frame" x="0.0" y="0.0" width="100.66666666666667" height="37.666666666666664"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                        <nil key="textColor"/>
+                                                        <color key="textColor" name="paleGray"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
-                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="1000" verticalCompressionResistancePriority="1000" text="label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RgQ-vQ-tK4">
-                                                        <rect key="frame" x="0.0" y="20.333333333333343" width="36" height="20.333333333333329"/>
-                                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                        <nil key="textColor"/>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="1000" verticalCompressionResistancePriority="1000" text="You progressed %34" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RgQ-vQ-tK4">
+                                                        <rect key="frame" x="0.0" y="37.666666666666671" width="100.66666666666667" height="22.333333333333329"/>
+                                                        <fontDescription key="fontDescription" type="system" pointSize="10"/>
+                                                        <color key="textColor" name="paleGray"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                 </subviews>
                                             </stackView>
-                                            <progressView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="1000" verticalHuggingPriority="1000" progress="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="A4v-MD-oUd">
-                                                <rect key="frame" x="0.0" y="96" width="67" height="4"/>
-                                            </progressView>
                                         </subviews>
-                                        <color key="backgroundColor" name="sapphireBlue"/>
+                                        <color key="backgroundColor" name="charcoal"/>
                                     </stackView>
+                                    <progressView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="1000" verticalHuggingPriority="1000" progress="0.34999999999999998" translatesAutoresizingMaskIntoConstraints="NO" id="A4v-MD-oUd">
+                                        <rect key="frame" x="15" y="136" width="130" height="4"/>
+                                        <color key="backgroundColor" name="paleGray"/>
+                                        <color key="progressTintColor" name="mintGreen"/>
+                                        <userDefinedRuntimeAttributes>
+                                            <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                                <integer key="value" value="2"/>
+                                            </userDefinedRuntimeAttribute>
+                                            <userDefinedRuntimeAttribute type="boolean" keyPath="clipsToBounds" value="YES"/>
+                                        </userDefinedRuntimeAttributes>
+                                    </progressView>
                                 </subviews>
-                                <color key="backgroundColor" name="sapphireBlue"/>
+                                <color key="backgroundColor" name="charcoal"/>
                                 <constraints>
-                                    <constraint firstItem="F45-vy-b3y" firstAttribute="top" secondItem="Ubc-xM-DpQ" secondAttribute="top" constant="5" id="1f5-9t-GsV"/>
-                                    <constraint firstItem="F45-vy-b3y" firstAttribute="leading" secondItem="Ubc-xM-DpQ" secondAttribute="leading" constant="5" id="UN2-EV-sxO"/>
-                                    <constraint firstAttribute="bottom" secondItem="F45-vy-b3y" secondAttribute="bottom" constant="5" id="WWV-bZ-g5a"/>
+                                    <constraint firstItem="F45-vy-b3y" firstAttribute="top" secondItem="Ubc-xM-DpQ" secondAttribute="top" constant="10" id="1f5-9t-GsV"/>
+                                    <constraint firstAttribute="trailing" secondItem="A4v-MD-oUd" secondAttribute="trailing" constant="15" id="7wV-hw-b4k"/>
+                                    <constraint firstItem="A4v-MD-oUd" firstAttribute="leading" secondItem="Ubc-xM-DpQ" secondAttribute="leading" constant="15" id="N8l-FL-o4U"/>
+                                    <constraint firstItem="F45-vy-b3y" firstAttribute="leading" secondItem="Ubc-xM-DpQ" secondAttribute="leading" constant="15" id="UN2-EV-sxO"/>
+                                    <constraint firstItem="A4v-MD-oUd" firstAttribute="bottom" secondItem="F45-vy-b3y" secondAttribute="bottom" constant="10" id="WWV-bZ-g5a"/>
                                     <constraint firstAttribute="trailing" secondItem="F45-vy-b3y" secondAttribute="trailing" constant="5" id="bAc-JZ-SDe"/>
+                                    <constraint firstAttribute="bottom" secondItem="A4v-MD-oUd" secondAttribute="bottom" constant="20" id="cLy-x2-drZ"/>
                                 </constraints>
                                 <userDefinedRuntimeAttributes>
                                     <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
@@ -88,15 +102,19 @@
                 <outlet property="imageView" destination="3hp-NS-FiP" id="udP-po-nOJ"/>
                 <outlet property="labelText" destination="Ye4-Mn-GpH" id="ika-yb-KfI"/>
             </connections>
-            <point key="canvasLocation" x="40.458015267175568" y="47.887323943661976"/>
+            <point key="canvasLocation" x="39.694656488549619" y="47.887323943661976"/>
         </collectionViewCell>
     </objects>
     <resources>
+        <image name="house" catalog="system" width="128" height="104"/>
+        <namedColor name="charcoal">
+            <color red="0.17254901960784313" green="0.20000000000000001" blue="0.24705882352941178" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="mintGreen">
+            <color red="0.23529411764705882" green="0.81176470588235294" blue="0.56862745098039214" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
         <namedColor name="paleGray">
             <color red="0.88235294117647056" green="0.89411764705882357" blue="0.90980392156862744" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </namedColor>
-        <namedColor name="sapphireBlue">
-            <color red="0.23921568627450981" green="0.41960784313725491" blue="0.88235294117647056" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
     </resources>
 </document>
